--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,50 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Montserrat", sans-serif;
+}
+
+body {
+    min-width: 470px;
+}
+
+.card {
+    height: 530px;
+}
+.summary-card,
+.tech-spec-card {
+    height: 400px;
+    width: 390px;
+}
+
+.tech-spec-card {
+    text-align: center;
+}
+
+.nav-link {
+    color: orange;
+}
+
+.nav-link:hover {
+    color: rgb(223, 146, 5);
 }
 
 .image {
-    height: 230px;
+    height: 180px;
+    width: 90%;
     background-color: white;
+    display: block;
+    margin: 0 auto;
+    border-radius: 7px;
+    padding-top: 5px;
+}
+
+.choose-btn {
+    display: block;
+    margin: 0 auto;
+    width: 80%;
+    position: relative;
+    bottom: 20px;
 }
 
 .navy-bg {
@@ -23,4 +62,10 @@
 
 .darker {
     filter: brightness(0.8);
+}
+
+.category {
+    text-transform: uppercase;
+    font-size: 80%;
+    color: orange;
 }
